2004-02-26  Andrew Cagney  <cagney@redhat.com>

	* Makefile.in: Update dependencies.
	Changes from Ulrich Weigand,
	* s390-tdep.c: Include "dwarf2-frame.h".
	(s390_dwarf2_frame_init_reg): New function.
	(s390_gdbarch_init): Install dwarf2_frame_sniffer and
	dwarf2_frame_base_sniffer.  Call dwarf2_frame_set_init_reg.

2004-02-26  Jeff Johnston  <jjohnstn@redhat.com>

	* breakpoint.c (pending_break_support): New setting variable.
	(break_command_1): Account for pending_break_support setting
	when creating pending breakpoints.
	(set_breakpoint_cmd, show_breakpoint_cmd): New functions.
	(_initialize_breakpoint): Add "set breakpoint pending" and
	"show breakpoint pending" commands.

2004-02-26  Andrew Cagney  <cagney@redhat.com>

	Fix PR i18n/1570.
	* charset.c (backslashable, backslashed, represented): Remove 'e'
	from list of escaped characters, not part of ISO-C.

2004-02-25  J. Brobecker  <brobecker@gnat.com>

	From Peter Schauer <schauer@pdf.de>:
	* tui/tui.c: Move system header includes after local includes.
	Fixes a build failure on solaris systems.

2004-02-25  J. Brobecker  <brobecker@gnat.com>

	* configure.in: Refine the previous change.
	* configure: Regenerate.

2004-02-25  Mark Kettenis  <kettenis@gnu.org>

	* amd64-tdep.h: Renamed from x86-64-tdep.h.
	* amd64-tdep.c: Renamed from x86-64-tdep.c.  Include
	"amd64-tdep.h" instead of "x86-64-tdep.h".
	* amd64-nat.c: Include "amd64-tdep.h" instead of "x86-64-tdep.h".
	* amd64-linux-tdep.h: Renamed from x86-64-linux.h.
	* amd64-linux-tdep.c: Renamed from x86-64-linux-tdep.c.  Include
	"amd64-tdep.h" and "amd64-linux-tdep.h" instead of "x86-64-tdep.h"
	and "x86-64-tdep.c".
	* amd64-linux-nat.c: Renamed from x86-64-linux-nat.c.  Include
	"amd64-tdep.h" and "amd64-linux-tdep.h" instead of "x86-64-tdep.h"
	and "x86-64-tdep.c".
	* amd64bsd-nat.c: Update copyright year.
	Include "amd64-tdep.h" instead of "x86-64-tdep.h".
	* amd64fbsd-tdep.c: Include "amd64-tdep.h" instead of
	"x86-64-tdep.h".