@@ -63,4 +63,10 @@ extern void print_octal_chars (struct ui_file *, unsigned char *,
 
 extern void print_decimal_chars (struct ui_file *, unsigned char *,
 				 unsigned int);
+
+extern void print_hex_chars (struct ui_file *, unsigned char *,
+			     unsigned int);
+
+extern void print_char_chars (struct ui_file *, unsigned char *,
+			      unsigned int);
 #endif
